major ui and game rules update

--- a/slot/slot.csproj
+++ b/slot/slot.csproj
@@ -75,6 +75,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Anticheat.cs" />
+    <Compile Include="Helpers.cs" />
     <Compile Include="PlayerBase.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
